# chronos

./: Cargo.toml  LICENSE  README.md
crates/chronos_analyzer/: Cargo.toml
crates/chronos_analyzer/src/: analyzer.rs  errors.rs  lib.rs  symbol_table.rs  types.rs
crates/chronos_cli/: Cargo.toml
crates/chronos_cli/src/: main.rs  repl.rs
crates/chronos_lexer/: Cargo.toml
crates/chronos_lexer/src/: errors.rs  lexer.rs  lib.rs  token.rs
crates/chronos_parser/: Cargo.toml
crates/chronos_parser/src/: ast.rs  errors.rs  lib.rs  parser.rs
crates/chronos_stdlib/: Cargo.toml
crates/chronos_stdlib/src/: io.rs  lib.rs  math.rs
crates/chronos_vm/: Cargo.toml
crates/chronos_vm/src/: bytecode.rs  compiler.rs  errors.rs  lib.rs  vm.rs
docs/: grammar.ebnf
examples/: hello_world.chrn  showcase.chrn  test_basic.chrn  test_control_flow.chrn  test_errors.chrn  test_functions.chrn  test_functions2.chrn  test_loop_counter.chrn  test_loops.chrn  test_run.chrn
