[workspace]
resolver = "2"
members = [
    "crates/chronos_lexer",
    "crates/chronos_parser",
    "crates/chronos_analyzer",
    "crates/chronos_vm",
    "crates/chronos_stdlib",
    "crates/chronos_cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["YOUR_NAME <your@email.com>"]
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/chronos"
description = "The CHRONOS Programming Language — Explicit. Ceremonial. Absolute."

[workspace.dependencies]
thiserror = "2.0"
logos = "0.15"
codespan-reporting = "0.11"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
rustyline = "15.0"
